# sensbee

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
cli/src/: cli.rs
config/: config.yml
config/jwt/: key.pem  key.pub.pem
docs/: README.md  build.sh  docker-compose.yml
docs/source/: conf.py  index.rst
docs/source/developer-guide/: debugging.rst  docker.rst  otel.rst
docs/source/references/: arch.rst  data-transformer.rst  event-system.rst
docs/source/user-guide/: sbmi.rst  tutorial.rst
event_handling/: Cargo.toml
event_handling/src/: main.rs
event_handling/src/tasks/: handler_manager.rs  mod.rs
event_handling/tasks_lib/: Cargo.toml
event_handling/tasks_lib/src/: lib.rs
event_handling/tasks_lib_macro/: Cargo.toml
event_handling/tasks_lib_macro/src/: lib.rs
migrations/: 20250203142300_change_roles_id_to_uuid.down.sql  20250203142300_change_roles_id_to_uuid.up.sql  20251009121900_init.down.sql  20251009121900_init.up.sql
openapi/: Cargo.toml
openapi/src/: main.rs
sbc/: Cargo.toml
sbc/src/: data_cmd.rs  help.rs  ingest_cmd.rs  lib.rs  me.rs  ollama.rs  role_cmd.rs  sbc.rs  sensor_cmd.rs  user_cmd.rs
sbmi/nginx/: nginx-no-cache.conf  nginx.conf
sbmi/static/: index.html
sbmi/static/css/: theme-base.css
sbmi/static/js/: auth.js  config.js  roles.js  sbmi.js  self-service.js  sensors.js  users.js
sbmi/static/js/pwa/: manifest.json  pwa.js  service-worker.js
sensor_mgmt/: Cargo.toml
sensor_mgmt/src/: state.rs  test_utils.rs  utils.rs
sensor_mgmt/src/authentication/: jwt_auth.rs  mod.rs  openid.rs  token.rs
sensor_mgmt/src/database/: data_chain_db.rs  data_db.rs  data_transformer_db.rs  event_handler_db.rs  mod.rs  role_db.rs  sensor_db.rs  sensor_events_db.rs  user_db.rs
sensor_mgmt/src/database/models/: data_chain.rs  data_transformer.rs  db_structs.rs  events.rs  mod.rs  role.rs  sensor.rs  sensor_perm.rs  user.rs
sensor_mgmt/src/features/: cache.rs  cache_sync.rs  config.rs  event_generation.rs  mod.rs  sensor_col_ingest.rs  sensor_data_storage.rs  sensor_data_transform.rs  telemetry.rs  user_sens_perm.rs
sensor_mgmt/src/handler/: auth_hdl.rs  cli_hdl.rs  data_hdl.rs  data_transform_hdl.rs  event_handler_hdl.rs  live_events_hdl.rs  main_hdl.rs  mod.rs  policy.rs  role_hdl.rs  sensor_hdl.rs  user_hdl.rs
sensor_mgmt/src/handler/data_ingest/: http.rs  ingest.rs  mod.rs  mqtt.rs
sensor_mgmt/src/handler/fixtures/: roles.sql  user_roles.sql  users.sql
sensor_mgmt/src/handler/models/: mod.rs  requests.rs  responses.rs  telelmetry.rs
server/: Cargo.toml
server/src/: main.rs
services/grafana/: README.md  docker-compose.yml  grafana-datasources.yaml  loki-config.yaml  otel-collector-config.yaml  tempo-config.yaml
services/mosquitto/: bridge.conf  mosquitto.conf
services/node.js/: Dockerfile  app.js  package.json  test.js
services/sbmi/: README.md
services/sbmi/static/: index.html
services/sbmi/static/js/: auth.js  config.js  data_transform.js  events.js  helper.js  roles.js  sbmi.js  sensors.js  session.js  users.js
services/sbmi/static/js/tools/: sensor_data_query_wizard.js  sensors_datachain.js
tools/: upload_size_test.sh
