[package]
name = "sb_event_handler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sb_event_handler"
path = "src/main.rs"

[dependencies]
tokio = "1.44.2"
sqlx = { version = "=0.8.3", features = ["runtime-tokio", "migrate", "json", "postgres", "time", "chrono", "uuid" ] }
anyhow = "1.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tracing = "0.1"
serde_json = "1.0"
env_logger = "0.11.8"
linkme = "0.3.33"

# OpenTelemetry & tracing
opentelemetry = { version = "0.30" }
opentelemetry_sdk = { version = "0.30" }
opentelemetry-otlp = { version = "0.30" }
opentelemetry-semantic-conventions = "0.30"
tracing-actix-web = "0.7.18"
tracing-opentelemetry = "0.31"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3.19"

# Local dependencies
sensor_mgmt = { path = "../sensor_mgmt" }
tasks_lib = {path = "../event_handling/tasks_lib"}
tasks_lib_macro = {path = "../event_handling/tasks_lib_macro"}