[package]
name = "sbc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sbc"
path = "src/sbc.rs"

[dependencies]
sensor_mgmt = { path = "../sensor_mgmt" }

rustyline = { version = "16.0", features = ["derive", "with-file-history", "custom-bindings"] }
rpassword = "7.4"
colored = "3"
tokio = "1.44.2"
anyhow = "1.0"
env_logger = "0.10"
dotenvy = "0.15.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
once_cell = "1.20.2"
ollama-rs = "0.3.2"
json_to_table = "0.6"
csv = "1.3.0"