[package]
name = "sensor_mgmt"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-http = "3.9.0"
actix-ws = "0.3.0"
async-std = { version = "1", features = ["attributes"]}
sqlx = { version = "=0.8.3", features = ["runtime-tokio", "tls-native-tls", "migrate", "json", "postgres", "time", "chrono", "uuid" ] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
rand_core = "0.9.3"
base64 = "0.22.1"
once_cell = "1.20.2"
utoipa = { version = "5.4.0", features = ["chrono", "actix_extras", "uuid"] }
derive_more = { version = "2", features = ["full"] }
tokio = { version="1.44.2", features = ["full"] }
serde_urlencoded = "0.7"
rumqttc = { version="0.24.0", features = ["websocket"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
env_logger = "0.11.8"
bytes = "1.10.1"
serde_repr = "0.1.20"
short-uuid = { version = "0.2.0", features = ["serde"] }
ulid = { version = "1.2.1", features = ["serde"] }
tracing = "0.1"
reqwest = "0.12.20"
dotenvy = "0.15.7"

# OpenTelemetry core
opentelemetry = { version = "0.30" }
opentelemetry_sdk = { version = "0.30" }
opentelemetry-otlp = { version = "0.30" }
opentelemetry-semantic-conventions = "0.30"
opentelemetry-appender-tracing = "0.30"
tracing-actix-web = "0.7.18"
tracing-opentelemetry = "0.31"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = {version="0.3.19", features = ["env-filter","registry", "std", "fmt"]}
openidconnect = {version  ="4.0.1", features = ["reqwest"]}
serde_yml = "0.0.12"
fastrand = "2.3.0"

[features]
cache_sync = []
