[package]
name = "sb_srv"
version = "1.0.0"
edition = "2021"

[dependencies]
sensor_mgmt = { path = "../sensor_mgmt" }

actix-web = "4"
sqlx = { version = "=0.8.3", features = ["runtime-tokio", "tls-native-tls", "migrate", "json", "postgres", "time", "chrono", "uuid" ] }
actix-cors = "0.7.0"
compile-time = "0.2.0"
tracing = "0.1"
tracing-actix-web = "0.7"
