[package]
name = "tasks_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "=0.8.3", features = ["runtime-tokio", "tls-native-tls", "migrate", "json", "postgres", "time", "chrono", "uuid" ] }
tokio = { version = "1", features = ["full"] } 
lazy_static = "1.4" 
linkme = "0.3.33"
tracing = "0.1"
serde_json = "1.0"

tracing-opentelemetry = "0.31"

#
sensor_mgmt = { path = "../../sensor_mgmt" }